@@ -25,8 +25,9 @@ refpolicy (2:2.20131109-1) UNRELEASED; urgency=low
   * debian/patches/0004-systemd-udevd_path.patch,
     debian/patches/0005-udevadm_path.patch: Properly label udevd and udevadm
   * debian/rules: Disable UBAC for the default policy
+  * debian/rules: Build the default policy with UNK_PERMS=allow
 
- -- Laurent Bigonville <bigon@debian.org>  Sun, 01 Dec 2013 17:51:51 +0100
+ -- Laurent Bigonville <bigon@debian.org>  Sun, 01 Dec 2013 17:57:21 +0100
 
 refpolicy (2:2.20110726-13) unstable; urgency=low
 
